--- a/PágI.html
+++ b/PágI.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="PágI.css">
-    <title>Document</title>
+    <title>Protótipo</title>
 </head>
 <body>
-    <header>
+    <header id="cabecalho">
         <h1 class="TituloP">ComTexto Literário</h1>
     </header>
+    <main>
+        <section>
+             <article class="livro">
+                <img id="imagem" src="https://m.media-amazon.com/images/I/71NYL2AbBIL.jpg" alt="">
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </article>
+            <article class="livro">
+                <img id="imagem" src="https://m.media-amazon.com/images/I/71NYL2AbBIL.jpg" alt="">
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
 
