--- a/PágI.html
+++ b/PágI.html
@@ -9,6 +9,7 @@
 <body>
     <header id="cabecalho">
        <img id="imagemcomtexto" blob:https://web.whatsapp.com/29760bfa-5233-4791-91e5-da0258395470" alt=""> <h1 class="TituloP">ComTexto Literário</h1>
+       <a href="">sobre nós</a>
     </header>
     <main>
         <section>
