Alt imagem comtexto

--- a/PágI.html
+++ b/PágI.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="cabecalho">
-       <img id="imagemcomtexto" blob:https://web.whatsapp.com/29760bfa-5233-4791-91e5-da0258395470" alt=""> <h1 class="TituloP">ComTexto Literário</h1>
+       <img id="imgComTexto" src="icon_page-0001.jpg" alt="imagem"> <h1 class="TituloP">ComTexto Literário</h1>
        <a href="">sobre nós</a>
     </header>
     <main>
