--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -7,15 +7,17 @@
     <title>ComTextoLiterário</title>
 </head>
 <body>
+
     <header id="cabecalho">
        <img id="imgComTexto" src="icon_page-0001.jpg" alt="imagem"> <h1 class="TituloP">ComTexto Literário</h1>
- <button class="menu-toggle" onclick="toggleMenu()">+</button>
- <nav id="menu" class="menu">
-<a href="#">Cadastro Bolsista</a>
-<a href="#">Sobre nos</a>
- </nav>
+ <button class="menu-toggle" onclick="toggleMenu()"><img src="menu-icon.png" alt=""></button>
+ 
     </header>
-
+<nav id="menu" class="menu">
+<a href="#">Cadastro de Bolsista</a>
+<a href="#">Sobre nós</a>
+<a href="#">ComTexto</a>
+ </nav>
     <main>
         <section>
              <article class="livro">
@@ -28,7 +30,8 @@
             </article>
         </section>
     </main>
- <script src="livro.js">defer</script>
+
+ <script src="menu.js">defer</script>
 </body> 
 </html>
 
