--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -8,32 +8,35 @@
 </head>
 <body>
 
+    <div class="menu-container">
+        <button id="menu-toggle" onclick="toggleMenu()">
+            <img src="menu-icon.png" alt="">
+        </button>
+        <nav id="menu" class="menu">
+            <a href="#">Cadastro de Bolsista</a>
+            <a href="#">Sobre nós</a>
+            <a href="#">ComTexto</a>
+        </nav>
+    </div>
+
     <header id="cabecalho">
-       <img id="imgComTexto" src="icon_page-0001.jpg" alt="imagem"> <h1 class="TituloP">ComTexto Literário</h1>
- <button class="menu-toggle" onclick="toggleMenu()"><img src="menu-icon.png" alt=""></button>
- 
+        <img id="imgComTexto" src="icon_page-0001.jpg" alt="imagem">
+        <h1 class="TituloP">ComTexto Literário</h1>
     </header>
-<nav id="menu" class="menu">
-<a href="#">Cadastro de Bolsista</a>
-<a href="#">Sobre nós</a>
-<a href="#">ComTexto</a>
- </nav>
+
     <main>
         <section>
-             <article class="livro">
+            <article class="livro">
                 <img id="imagem" src="https://m.media-amazon.com/images/I/71NYL2AbBIL.jpg" alt="">
-                <p class="textocaixa">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                <p class="textocaixa">"Lorem ipsum dolor sit amet..."</p>
             </article>
             <article class="livro">
                 <img id="imagem" src="https://m.media-amazon.com/images/I/71NYL2AbBIL.jpg" alt="">
-                <p class="textocaixa">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                <p class="textocaixa">"Lorem ipsum dolor sit amet..."</p>
             </article>
         </section>
     </main>
 
- <script src="menu.js">defer</script>
-</body> 
+    <script src="menu.js" defer></script>
+</body>
 </html>
-
-
-
