--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -10,7 +10,7 @@
 
     <div class="menu-container">
         <button id="menu-toggle" onclick="toggleMenu()">
-            <img src="menu-icon.png" alt="">
+            <img src="imgpaginicial/menu-icon.png" alt="">
         </button>
         <nav id="menu" class="menu">
             <a href="#">Cadastro de Bolsista</a>
@@ -20,22 +20,28 @@
     </div>
 
     <header id="cabecalho">
-        <img id="imgComTexto" src="icon_page-0001.jpg" alt="imagem">
+        <img id="imgComTexto" src="imgpaginicial/imgComtexto.jpg" alt="imagem">
         <h1 class="TituloP">ComTexto Literário</h1>
     </header>
 
     <main>
         <section>
             <article class="livro">
+                <h2>Teste</h2>
                 <img id="imagem" src="https://m.media-amazon.com/images/I/71NYL2AbBIL.jpg" alt="">
                 <p class="textocaixa">"Lorem ipsum dolor sit amet..."</p>
             </article>
             <article class="livro">
+                <h2>Teste</h2>
                 <img id="imagem" src="https://m.media-amazon.com/images/I/71NYL2AbBIL.jpg" alt="">
                 <p class="textocaixa">"Lorem ipsum dolor sit amet..."</p>
             </article>
         </section>
     </main>
+
+    <footer>
+  <img id="logo" src="imgpaginicial/Logo_IFC_vertical_Ibirama.png" alt=""> <h2 class="infofooter">IFC - Campus Ibirama</h2>   <h4 class="infofooter">ComTexto@gmail.com</h4>  
+    </footer>
 
     <script src="menu.js" defer></script>
 </body>
