--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -22,8 +22,9 @@
     <header id="cabecalho">
         
         <img id="imgComTexto" src="imgpaginicial/imgComtexto.jpg" alt="imagem">
+    
         <h1 class="TituloP">ComTexto Literário</h1>
-
+<h2 id="subtitulo">Descolonizando Leituras</h2>
 </header>
 
     <main>
