22/04 ajustes no posicao dos itens, calendario tela login

--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="PágI.css">
-    <title>ComTextoLiterário</title>
+    <link rel="shortcut icon" type="imagex/png" href="imgpaginicial/imgComtexto.jpg">
+    <title>ComTexto Literário</title>
 </head>
 <body>
 
@@ -13,8 +14,8 @@
             <img src="imgpaginicial/menu-icon.png" alt="">
         </button>
         <nav id="menu" class="menu">
-            <a href="#">Cadastro de Bolsista</a>
-            <a href="#">Sobre nós</a>
+            <a href="#">Coordenador</a>
+            <a href="#">Bolsista</a>
             <a href="#">ComTexto</a>
         </nav>
     </div>
@@ -26,8 +27,9 @@
         <h1 class="TituloP">ComTexto Literário</h1>
 <h2 id="subtitulo">Descolonizando Leituras</h2>
 </header>
-
+<div class="linhavertical"></div>
     <main>
+        <div id="livrosemana"><div id="fundo"><h2 id="textolivro">Livros da semana</h2></div></div>
         <section>
             <article class="livro">
                 <h2>Teste</h2>
