--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" type="imagex/png" href="imgpaginicial/imgComtexto.jpg">
     <title>ComTexto Literário</title>
 </head>
+
 <body>
 
     <div class="menu-container">
@@ -18,18 +20,27 @@
             <a href="#">Bolsista</a>
             <a href="#">ComTexto</a>
         </nav>
+        <div id="caixa-logoif">
+            <img id="logo" src="imgpaginicial/Logo_IFC_vertical_Ibirama.png" alt="">
+        </div>
     </div>
 
     <header id="cabecalho">
-        
+
         <img id="imgComTexto" src="imgpaginicial/imgComtexto.jpg" alt="imagem">
-    
-        <h1 class="TituloP">ComTexto Literário</h1>
-<h2 id="subtitulo">Descolonizando Leituras</h2>
-</header>
-<div class="linhavertical"></div>
+        <div class="titulos">
+            <h1 class="TituloP">ComTexto Literário</h1>
+            <h2 id="subtitulo">Descolonizando Leituras</h2>
+        </div>
+    </header>
+    <div class="linhahorizontal"></div>
+    <div class="linhavertical"></div>
     <main>
-        <div id="livrosemana"><div id="fundo"><h2 id="textolivro">Livros da semana</h2></div></div>
+        <div id="livrosemana">
+            <div id="fundo">
+                <h2 id="textolivro">Livros da semana</h2>
+            </div>
+        </div>
         <section>
             <article class="livro">
                 <h2>Teste</h2>
@@ -45,9 +56,12 @@
     </main>
 
     <footer>
-  <img id="logo" src="imgpaginicial/Logo_IFC_vertical_Ibirama.png" alt=""> <h2 class="infofooter">IFC - Campus Ibirama</h2>   <h4 class="infofooter">ComTexto@gmail.com</h4>  
+
+        <h2 class="infofooter">IFC - Campus Ibirama</h2>
+        <h4 class="infofooter">ComTexto@gmail.com</h4>
     </footer>
 
     <script src="menu.js" defer></script>
 </body>
+
 </html>
