--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -22,7 +22,7 @@
         </nav>
 
         <a id="botao-livro" href="#"><img src="imgpaginicial/livro.png" alt=""></a>
-        <a id="botao-calendario" href="#"><img src="imgpaginicial/calendario-removebg-preview.png" alt=""></a>
+        <a id="botao-calendario" href="Telacalendario.html"><img src="imgpaginicial/calendario-removebg-preview.png" alt=""></a>
         <div id="caixa-logoif">
             <img id="logo" src="imgpaginicial/Logo_IFC_vertical_Ibirama.png" alt="">
         </div>
@@ -61,7 +61,8 @@
     <footer>
 
         <h2 class="infofooter">IFC - Campus Ibirama</h2>
-        <h4 class="infofooter">ComTexto@gmail.com</h4>
+        <h4>ComTextoLiterário@gmail.com</h4>
+        <h6>Todos os direitos reservados ComTextoLiterário</h6>
     </footer>
 
     <script src="menu.js" defer></script>
