--- a/Telalogin.html
+++ b/Telalogin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="Telalogin.css">
-    <title>Ben Winds!</title>
+    <title>login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-color: #f5f5f5;
+            background-color: #deb887;
         }
         .welcome {
             font-size: 2em;
@@ -27,15 +27,16 @@
             align-items: center;
         }
         .login-input {
+            margin-top: 15px;
             margin-bottom: 15px;
             padding: 10px;
             width: 200px;
-            border: 1px solid #ddd;
+            border: 1px solid #e5c68a;
             border-radius: 4px;
         }
         .login-button {
             padding: 10px 20px;
-            background-color: #333;
+            background-color: #7a4500;
             color: white;
             border: none;
             border-radius: 4px;
@@ -45,11 +46,13 @@
     </style>
 </head>
 <body>
-    <div class="welcome">Bem vindes!</div>
+    <div class="welcome">Bem Vindos!</div>
     
     <form class="login-form">
-        <input type="text" class="login-input" placeholder="entra">
-        <button type="submit" class="login-button">Enterar</button>
+        <input type="text" class="login-input" placeholder="login">
+        <input type="text" class="login-input" placeholder="senha"> 
+               <button type="submit" class="login-button">Entrar</button>
+
     </form>
 </body>
 </html>
