--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -58,11 +58,13 @@
         </section>
     </main>
 
+   
     <footer>
-
-        <h2 class="infofooter">IFC - Campus Ibirama</h2>
-        <h4>ComTextoLiterário@gmail.com</h4>
-        <h6>Todos os direitos reservados ComTextoLiterário</h6>
+        <div class="infofooter">
+        <h2 >IFC - Campus Ibirama</h2> &nbsp;  &nbsp;
+         <h4> ComTextoLiterário@gmail.com</h4>
+        </div>
+        <h6>Todos os direitos reservados ComTexto Literário</h6>
     </footer>
 
     <script src="menu.js" defer></script>
