--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -39,12 +39,14 @@
             <h1 class="TituloP">ComTexto Literário</h1>
             <h2 id="subtitulo">Descolonizando Leituras</h2>
         </div>
+        <a class="logout-link" href="#" onclick="logout()" style="display:none;">Sair</a>
     </header>
+
     <div class="linhahorizontal"></div>
     <div class="linhavertical"></div>
     <main>
         <div class="topicos">
-        <button id="btn-cadastrar-livro" style="display:none;"><img id="imglivroadd" src="imgpaginicial/addasimverde.png" alt=""></button>
+        <button id="btn-cadastrar-livro"><img id="imglivroadd" src="imgpaginicial/addasimverde.png" alt=""></button>
         <div id="livrosemana">
             <div id="fundo">
                 <h2 id="textolivro">Livros da semana</h2>
