--- a/Telalogin.html
+++ b/Telalogin.html
@@ -50,7 +50,7 @@
     
     <form class="login-form" onsubmit="login(event)">
         <input type="text" id="email" class="login-input" placeholder="E-mail">
-        <input type="text" id="senha" class="login-input" placeholder="Senha"> 
+        <input type="password" id="senha" class="login-input" placeholder="Senha"> 
         <button type="submit" class="login-button">Entrar</button>
 
     </form>
