--- a/PáginaInicial.html
+++ b/PáginaInicial.html
@@ -14,13 +14,13 @@
     <div class="modal-content">
         <span class="close-modal">&times;</span>
         <h2>Cadastrar Novo Livro</h2>
-        <form id="form-livro">
-            <input type="text" id="titulo" placeholder="Título" required>
-            <input type="text" id="autor" placeholder="Autor" required>
-            <input type="text" id="genero" placeholder="Gênero">
-            <textarea id="resumo" placeholder="Resumo"></textarea>
-             <input type="text" id="imagem" placeholder="URL da Imagem (Capa)">
-            <input type="text" id="pdf" placeholder="Link do PDF (opcional)">
+        <form id="form-livro" method="post" action="cadastrar.php">
+            <input type="text" id="titulo" placeholder="Título" name="titulo" required>
+            <input type="text" id="autor" placeholder="Autor" name="autor" required>
+            <input type="text" id="genero" placeholder="Gênero" name="genero">
+            <textarea id="resumo" placeholder="Resumo" name="resumo"> </textarea>
+             <input type="text" id="imagem" placeholder="URL da Imagem (Capa)" name="imagem">
+            <input type="text" id="pdf" placeholder="Link do PDF (opcional)" name="pdf">
             <button type="submit">Salvar</button>
         </form>
     </div>
