estilização do botao

--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
                     <h2 id="textolivro">Livros da semana</h2>
                 </div>
             </div>
+            <div id="container-cad-bolsista" style="display: none;">
+                <button itemid="toggle" id="btn-cadastrar-bolsista" style="display: none;"><img src="imgpaginicial/107256-removebg-preview.png" alt=""></button>
 
-            <button itemid="toggle" id="btn-cadastrar-bolsista" style="display: none;">Cadastrar Bolsista</button>
+            </div>    
         </div>
 
         <section>
