--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         </nav>
 
-        <a id="botao-livro" href="#"><img src="imgpaginicial/livro.png" alt=""></a>
+        <a id="botao-livro" href="biblioteca.html"><img src="imgpaginicial/livro.png" alt=""></a>
         <a id="botao-calendario" href="Telacalendario.html"><img src="imgpaginicial/calendario-removebg-preview.png"
                 alt=""></a>
         <div id="caixa-logoif">
@@ -80,7 +80,7 @@
             </div>
             <div id="container-cad-bolsista" style="display: none;">
                 <button itemid="toggle" id="btn-cadastrar-bolsista" style="display: none;"><img src="imgpaginicial/107256-removebg-preview.png" alt=""></button>
-
+<p id="texto-cad-bolsista">Adicionar Bolsista</p>
             </div>    
         </div>
 
