--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <body>
-<!-- Modal de Cadastro de Livro (hidden por padrão) -->
+<!-- Modal de Cadastro Livro (hidden por padrão) -->
 <div id="modal-livro" class="modal" style="display: none;">
     <div class="modal-content">
         <span class="close-modal">&times;</span>
@@ -30,6 +30,14 @@
         </form>
     </div>
 </div>
+
+<!-- Menu de Bolsita--> 
+<div id="modal-bolsista" class="modal" style="display: none;">
+<div class="modal-content">
+
+</div>
+</div>
+
     <div class="menu-container">
         <button id="menu-toggle">
             <img src="imgpaginicial/menu-icon.png" alt="">
@@ -58,7 +66,7 @@
             <h1 class="TituloP">ComTexto Literário</h1>
             <h2 id="subtitulo">Descolonizando Leituras</h2>
         </div>
-        <a id="logout" class="logout-link" href="#" onclick="logout()" style="display:none;">Sair</a>
+        <a id="logout" class="logout-link" href="#" onclick="logout()" style="display:none;"> <img src="imgpaginicial/imagemmenorlogout-removebg-preview.png" alt=""></a>
     </header>
 
     <div class="linhahorizontal"></div>
