ajustes gerais e estilização

--- a/Telalogin.html
+++ b/Telalogin.html
@@ -46,6 +46,10 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1 id="TituloP">ComTexto Literário</h1>
+    </header>
+    
     <div class="welcome">Bem Vindos!</div>
     
     <form class="login-form" onsubmit="login(event)">
