--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <img src="imgpaginicial/menu-icon.png" alt="">
         </button>
         <div id="menu-opcoes" class="menu-oculto" style="display: none;">
-            <a href="Telalogin.html">Login</a>
+            <a id="entrarconta" href="Telalogin.html"><img id="iconlogin" src="imgpaginicial/conta-removebg-preview.png" alt=""> <h3>  &nbsp &nbsp Entrar</h3></a>
+            <br>
             <a href="#">ComTexto</a>
         </div>
 
