--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 <!-- Menu de Bolsita--> 
 <div id="modal-bolsista" class="modal" style="display: none;">
 <div class="modal-content">
-
+<form id="form-bolsista" method="post" action="bolsista.php">
+    <input type="text" id="nome" name="nome">
+     <input type="text" id="email" name="email">
+     <input type="text" id="senha" name="senha">
+    <button type="submit">Salvar</button>
+</form>
 </div>
 </div>
 
