--- a/TelaloginB.html
+++ b/TelaloginB.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="Telalogin.css">
+   <link rel="stylesheet" href="TelaloginB.css">
     <title>login</title>
     <style>
         body {
@@ -51,13 +51,13 @@
     </header>
     
     <div class="welcome"><h2>Bem Vindos!</h2>
-    <h4>Entre como Coordenador</h4>
+    <h4>Entre como Bolsista</h4>
+    </div>
     
-    <form method="post" action="login.php" class="login-form" onsubmit="login(event)">
-        <input type="text" id="email" class="login-input" placeholder="E-mail" name="email">
-        <input type="password" id="senha" class="login-input" placeholder="Senha" name="senha"> 
+    <form class="login-form" onsubmit="login(event)">
+        <input type="text" id="email" class="login-input" placeholder="E-mail">
+        <input type="password" id="senha" class="login-input" placeholder="Senha"> 
         <button type="submit" class="login-button">Entrar</button>
-
     </form>
     <script src="Telalogin.js"></script>
 </body>
