--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input type="text" id="genero" placeholder="Gênero" name="genero" required>
             <textarea id="resumo" placeholder="Resumo" name="resumo" required> </textarea>
             <input type="text" id="imagem" placeholder="URL da Imagem (Capa)" name="imagem" required>
-            <input type="text" id="pdf" placeholder="Link do PDF (opcional)" name="pdf" required>
+            <input type="file" accept=".pdf"  id="pdf" placeholder="Link do PDF (opcional)" name="pdf" required>
             <button type="submit">Salvar</button>
         </form>
     </div>
@@ -48,7 +48,10 @@
             <img src="imgpaginicial/menu-icon.png" alt="">
         </button>
         <div id="menu-opcoes" class="menu-oculto" style="display: none;">
-            <a id="entrarconta" href="Telalogin.html"><img id="iconlogin" src="imgpaginicial/conta-removebg-preview.png" alt=""> <h3>  &nbsp &nbsp Entrar</h3></a>
+            <a id="entrarconta" href="Telalogin.html"><img id="iconlogin" src="imgpaginicial/conta-removebg-preview.png" alt=""> <h3>  &nbsp &nbsp Coordenador</h3></a>
+            <br>
+            <br>
+             <a id="entrarconta" href="TelaloginB.html"><img id="iconlogin" src="imgpaginicial/conta-removebg-preview.png" alt=""> <h3>  &nbsp &nbsp Bolsista</h3></a>
             <br>
             <a href="#">ComTexto</a>
         </div>
